Sugati/src/objects/Images_AI__c.object
<CustomObject>
    <fields>
        <fullName>AI_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Images AI</relationshipLabel>
        <relationshipName>Images_AI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AI_Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AI_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Images AI</relationshipLabel>
        <relationshipName>Images_AI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AI_Image_ID__c</fullName>
        <label>Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AI_Image__c</fullName>
        <formula>IF(ISBLANK(AI_Image_ID__c),null,IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; AI_Image_ID__c, &apos; &apos;,70,100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AI_Parent_ID__c</fullName>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AI_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Images AI</relationshipLabel>
        <relationshipName>Images_AI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AI_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Images_AI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AI_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipLabel>Images AI</relationshipLabel>
        <relationshipName>Images_AI</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Images AI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AI_Activity__c</columns>
        <columns>AI_Country__c</columns>
        <columns>AI_Image_ID__c</columns>
        <columns>AI_Supplier__c</columns>
        <columns>AI_Where_to_go__c</columns>
        <columns>AI_Count__c</columns>
        <columns>AI_Image__c</columns>
        <columns>AI_User__c</columns>
        <columns>AI_Parent_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>Images AI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Images AI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>